Add templates for post, archive and main page.

--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 ---
-title: Home
+title: .drobnik blog
 ---
-
+<div class="row">
 <h2>Welcome</h2>
-
-<img src="/images/haskell-logo.png" style="float: right; margin: 10px;" />
 
 <p>Welcome to my blog!</p>
 
-<p>I've reproduced a list of recent posts here for your reading pleasure:</p>
-
+<div class="seven columns">
 <h2>Posts</h2>
 $partial("templates/post-list.html")$
+</div>
 
-<p>…or you can find more in the <a href="/archive.html">archives</a>.</p>
+<div class="four columns">
+  <h2>Archive</h2>
+  <p>blah blah</p>
+</div>
+
+</div>
