--- a/side-pages/about.html
+++ b/side-pages/about.html
@@ -3,6 +3,7 @@ layout: page
 title: About
 permalink: /about/
 title-override: Hello
+nav-include: true
 ---
 <div id="about">
   <div class="avatar">
