Use image param on all pages

--- a/side-pages/about.html
+++ b/side-pages/about.html
@@ -4,6 +4,7 @@ title: About
 permalink: /about/
 title-override: Hello
 nav-include: true
+image: assets/img/socialpreview.jpg
 ---
 <div id="about">
   <div class="avatar">
