--- a/side-pages/credits.html
+++ b/side-pages/credits.html
@@ -2,6 +2,7 @@
 layout: page
 title: Credits
 permalink: /credits/
+image: assets/img/socialpreview.jpg
 ---
 
 <div class="no-bottom-margin credits">
